<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/display_note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/test_title"
                android:textColor="#000"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7">

                <TextView
                    android:id="@+id/display_note_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/test_desc"
                    android:textSize="16sp" />
            </android.support.design.widget.CoordinatorLayout>

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <CheckBox
                    android:id="@+id/display_note_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|end"
                    android:scaleX="0.85"
                    android:scaleY="0.85"
                    android:text="@string/checkbox_text" />
            </android.support.design.widget.CoordinatorLayout>


        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>